update book pages, add more scripting docs

--- a/about.html
+++ b/about.html
@@ -62,6 +62,14 @@
 		<li> Standard Linked List Implementation</li>
 		<li> Standard Unordered Map Implementation</li>
 	</ul>	
+	
+	<div style = "padding-left:5%; padding-right:5%; padding-bottom:5em; text-align:right;" id = "contact-me">
+		<hr>
+		<h2>Contact Me</h2>				
+		<a href = "mailto:kyecunningham53@gmail.com"><i class="icon-fixed-width icon-large icon-envelope"></i></a>
+		<a href = "https://github.com/daz3n"><i class="icon-fixed-width icon-large icon-github"></i></a>
+		<a href = "#"><i class="icon-fixed-width icon-large icon-linkedin"></i></a>				
+	</div>
 </div>
 	</body>
 </html>
