--- a/pages/kind of evil/1.html
+++ b/pages/kind of evil/1.html
@@ -41,21 +41,27 @@
 
 <p>The pressure grows, and with the last of my clouded thoughts, I <em>push</em> magic into the fire, desperately feeding the flame until it ignites even the hair on my arms, scorching my face and drying my eyes all at once. As the walls light up, I see the creature in its’ entirety for the first time. The first thing I see is a snarling face, sharp teeth gleaming like polished marble in the blood red recess of its’ mouth. Dark eyes, piercingly focussed on each of us. A bare torso, lean and muscular, framed by the batlike wings that extend from its’ back, unfurling until their tips scrape against the edges of the cavern.</p>
 
-<p>Snapped out of our reverie, we step back, feet scraping against the ground that suddenly doesn’t feel as firm as it should. It’s not enough. The creature snarls, pouncing on those closest to it in a flurry of claw and fang. Clearly visible in the torchlight, dark veins seeming to shift under its’ alabaster skin as it moves. Time slows, and I feel my blade rising from my sheath, countering the claw strike that was aimed at my chest. Fumbling to grab it properly, I duck, swinging the blade horizontally to score a deep wound along its’ ribcage. A dark ichor, almost tarlike, slowly seeps out of the wound and onto the ground.</p>
+<p>Snapped out of our reverie, we step back, feet scraping against the ground that suddenly doesn’t feel as firm as it should. It’s not enough. The creature snarls, pouncing on those closest to it in a flurry of claw and fang. Clearly visible in the torchlight, dark veins seeming to shift under its’ alabaster skin as it moves. Time slows, and I feel my blade rising from my sheath, countering the claw strike that was aimed at my chest. Fumbling to grab it properly, I duck, swinging the blade horizontally to score a deep wound along its’ ribcage. A dark ichor, almost tarlike, slowly seeps out of the wound and onto the ground, corroding the stone it lands on.</p>
 
 <p><strong>Everyone seems to be surprised that I actually wounded the creature.</strong></p>
 
 <p><strong>The fight isn’t very long - we came prepared, and although the creature is deadly, it’s clearly already starving and weakened. We leave the body where it lies for now - if we need, someone can come pick it up in the morning to burn.</strong></p>
 
-<p><strong>returning home, we’re met with anxious friends and family, eager to know what we found, and why we look so beaten up</strong></p>
+<p><strong>I happen to find a book on ancient magic in its belongings, and take it with me without telling anyone.</strong></p>
+
+<p><strong>returning home, we’re met with anxious friends and family, eager to know what we found, and why we look so beaten up.</strong></p>
 
 <p><strong>a meeting is held the next day with the ones of us who are healthy enough to stand and move around. so i tell the council/city lord what i found.</strong></p>
 
 <p><strong>they regognise it as a vampire, something that was supposed to have been hunted to extinction years ago.</strong></p>
 
-<p><strong>council/lord decides to send me to tell the king and request greater aid to defeat this infestation.</strong></p>
+<p><strong>council/lord decides to send me to tell the king and request greater aid to defeat this infestation, as well as warn them that the vampires have come back.</strong></p>
 
-<p><strong>I travel all the way from the settlement to the center of the territory, to the largest city, and tell their city council what we found and how we killed it. they escalate it to the king, because vampires were supposed to have been eradicated by the king when he took the throne.</strong></p>
+<p><strong>I travel all the way from the settlement to the center of the territory, to the largest city, and tell their city council what we found and how we killed it.</strong></p>
+
+<p><strong>during the journey, I meet brigands, fortune tellers, and all sorts of odd folks in odd places. As I get closer to the capital, I keep studying the magic book to improve my magic.</strong></p>
+
+<p><strong>they escalate it to the king, because vampires were supposed to have been eradicated by the king when he took the throne.</strong></p>
 
 <p><strong>it turns out that the king had made a pact with vampires to let them feed on his outer territories in exchange for stopping the war that was going on between humans and vampires. He thought he could get away with it because we’re a small place and he thought nobody would notice/ have the power to challenge his decision or bring it to light. It’s surprising because he seemed to be a good king otherwise, and most of the kingdom has prospered under his rule. This should get slowly found out while digging through archives, listening to dying vampires as they gloat, etc.</strong></p>
 
@@ -70,8 +76,56 @@ us.</strong></p>
 
 <p>the chapter where i become a vampy should be called getting burned</p>
 
-<p><strong>eventually they realise that im a vampire, idk what should happen yet tho</strong>
-<strong>either get outcast or they accept it as a necessary sacrifice</strong></p>
+<p><strong>It still isnt enough, and my home settlement is eventually razed to the ground by the kings men. I escape, going undercover and making my way deeper into the kingdom, hiding in a large city and becoming an adventurer/bounty hunter who still has to hide his vampirism.</strong></p>
+
+<p><strong>Over time, I start plotting to overthrow the king, and spread rumors of his association with vampires. Trying to gather a following large enough to be threatening, but still staying hidden and blending in with the normal people.</strong></p>
+
+<p><strong>idk what should happen next</strong></p>
+
+<p><strong>either i rethink the whole overthrowing thing, or I go through with it and win in which case i either become king or put a king on the throne, or I go through with it and lose, in which case I would either escape (again) or get executed.</strong></p>
+
+<p><strong>eventually they realise that im a vampire, idk what should happen yet tho</strong></p>
+
+<p>this plot could be made to work, but i wanna try stay true to my original idea</p>
+
+<p>so</p>
+
+<p><strong>after I give news of the vampire, the city lord asks how we survived</strong></p>
+
+<p><strong>I describe the event, making them aware that we had to use magic to win against the vampire</strong></p>
+
+<p><strong>so, the kingdom rules for magic up to this point had been pretty simple:</strong></p>
+
+<ul>
+  <li>
+    <p><strong>gaining magic by contracting with higher beings isn’t allowed - they might force you to commit other illegal acts in order to keep your magic</strong></p>
+  </li>
+  <li>
+    <p><strong>using magic to animate items with anything other than their original soul isn’t allowed</strong></p>
+  </li>
+  <li>
+    <p><strong>storing magic can only be done with a licence - you could store magic forever and then do something really dangerous and stupid with it</strong></p>
+  </li>
+</ul>
+
+<p><strong>this means that businesses, factories, etc, will probably need to get a licence if they want to use magic in their production pipeline, because they will most likely need to store a source somewhere to keep the magic going - either through runes or by letting magic users drain the source directly</strong></p>
+
+<ul>
+  <li>
+    <p><strong>you need to be over 16 to buy any spell. if you own or use any spells before that, then you are breaking the law.</strong></p>
+  </li>
+  <li>
+    <p><strong>you need to be over 18 to buy most spells.</strong></p>
+  </li>
+  <li>
+    <p><strong>you need to be over 24 to buy some spells</strong></p>
+  </li>
+  <li>
+    <p><strong>you need to to get qualifications or do various courses, and/or meet some other criteria to buy some other spells</strong></p>
+  </li>
+</ul>
+
+<p><strong>so, the kingdom rules for magic up to this point had been pretty simple:</strong></p>
 
 
 		</div>
