--- a/pages/kind of evil/4.html
+++ b/pages/kind of evil/4.html
@@ -5,7 +5,7 @@
 		
 		
 		<meta charset = "utf-8">
-		<!-- <title></title> -->
+		<!-- <title>Known magic</title> -->
 		<title>Kind of evil</title> 
 		<!-- styles -->				
 		<link id = "theme" rel="stylesheet" href="/assets/themes/dark.css">
@@ -23,7 +23,64 @@
 		</div>
 		
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">		
-			<h1 id="oops-you-read-quickly-try-coming-back-later-for-more-chapters-">Oops, you read quickly! Try coming back later for more chapters :)</h1>
+			<h2 id="registered-magics">Registered Magics</h2>
+
+<h3 id="fireball">Fireball</h3>
+
+<p>Ignite the magic in your hands, hurling an incandescent ball of pure fire.</p>
+
+<h3 id="bubble-shield">Bubble Shield</h3>
+
+<p>Create a spherical force shield around your body to repel projectiles, rain, and magic.</p>
+
+<hr />
+
+<h2 id="unregistered-magics">Unregistered Magics</h2>
+
+<h3 id="call-fire">Call Fire</h3>
+
+<p>Any material you touch with intent will become more flammable. 
+Many rangers, hunters and trappers are born with the ability to do this.
+It manifests as a general skill at lighting fires.</p>
+
+<h3 id="flame-whisper">Flame Whisper</h3>
+
+<p>Used by the protagonist to guide flames.</p>
+
+<h3 id="spirit-commune">Spirit Commune</h3>
+
+<p>Share your mind with another creature. Often used to calm or communicate with animals.</p>
+
+<h3 id="ghost-walk">Ghost Walk</h3>
+
+<p>Separate your spirit from your body, using magic to retain a connection between them.
+If your tether is destroyed, your spirit will be separated from your body until you perish.</p>
+
+<h3 id="bless">Bless</h3>
+
+<p>Dissolve a part of your magic into an object or person to strengthen it.</p>
+
+<h3 id="soul-sacrifice">Soul Sacrifice</h3>
+
+<p>Dissolve a part of your soul into a person or creature. While you both survive, you can feel their emotions and general state of wellbeing.
+They also have access to an amount of your magic that’s proportional to how much of your soul you dissolved into them.
+If they die, you will not regain your soul.
+If you have no more of your original soul, you will die.
+If you die, the blessing will slowly fade, as if it’s a plant that has stopped recieving nutrients.</p>
+
+<h3 id="sight">Sight</h3>
+
+<p>Predict what the future holds. This is a rare gift, and often manifests as a surety in their present actions, as well as a strategic mind.</p>
+
+<hr />
+
+<h2 id="banned-magics">Banned Magics</h2>
+
+<h3 id="consume-life">Consume Life</h3>
+
+<p>Drain the energy, health, magic, and soul of a creature in contact with you. You will not gain everything that the other creature loses. 
+Instead, some of the resources are lost in the process, passing into the fourth dimension, where they dissapate slowly into the world.</p>
+
 
 		</div>
 		
