add study notes

--- a/pages/kind of evil/1.html
+++ b/pages/kind of evil/1.html
@@ -94,6 +94,12 @@ us.</strong></p>
 
 <p><strong>I describe the event, making them aware that we had to use magic to win against the vampire</strong></p>
 
+<p><strong>the council/lord then decides to add even more restrictions on magic, except a lot of the restrictions hit hardest on the outer communities that don’t use registered magics as much, and arent formally educated</strong></p>
+
+<p><strong>i need a good motivation for them to do this though…</strong></p>
+
+<p>**after this, the **</p>
+
 <p><strong>so, the kingdom rules for magic up to this point had been pretty simple:</strong></p>
 
 <ul>
@@ -124,8 +130,6 @@ us.</strong></p>
     <p><strong>you need to to get qualifications or do various courses, and/or meet some other criteria to buy some other spells</strong></p>
   </li>
 </ul>
-
-<p><strong>so, the kingdom rules for magic up to this point had been pretty simple:</strong></p>
 
 
 		</div>
