Add Legal and Ethical Issues of Data Collection and Processing

--- a/notes/Learn Programming From Scratch.html
+++ b/notes/Learn Programming From Scratch.html
@@ -17,11 +17,11 @@
 
 	<body>
 		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
-<p>Instead of assuming the user knows what language they want to use, I will instead provide a list of projects. These projects will have a difficulty rating and a clear end goal. This will let you choose whichever one suits your interests the most, and customise it for whatever you need.</p>
-
 <hr />
 
 <h1 id="projects">Projects</h1>
+
+<p>The aim of these projects is to provide a foundation for study - not to provide a complete education on programming. Each one of these projects was chosen because they make use of different techniques that are commonly used throughout many other projects, and will hopefully provide a good starting point to making your own software of choice, whatever that may be.</p>
 
 <h2 id="dungeons-and-dragons-statsheet-tracker">Dungeons And Dragons Statsheet Tracker</h2>
 
@@ -33,6 +33,8 @@
 
 <p>You will learn the basics of file IO in C++, and how to use stdin and stdout.</p>
 
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
+
 <h2 id="text-adventure">Text Adventure</h2>
 
 <p>Difficulty: 2</p>
@@ -42,6 +44,8 @@
 <p>Tools and Frameworks: MSVC</p>
 
 <p>You will learn the basics of C++, as well as implement a basic state machine. You will then move on to saving your character to load later, as well as saving important world events.</p>
+
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
 
 <h2 id="website">Website</h2>
 
@@ -53,6 +57,8 @@
 
 <p>You will first make a static website using HTML and CSS. Afterwards, you will gain experience with Javascript, before moving onto using React. Finally, you will use either Node.js or Flask to complete the project.</p>
 
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
+
 <h2 id="web-scraper">Web Scraper</h2>
 
 <p>Difficulty: 3</p>
@@ -62,6 +68,8 @@
 <p>Tools and Frameworks: To Be Decided</p>
 
 <p>desc</p>
+
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
 
 <h2 id="2d-platformer">2D Platformer</h2>
 
@@ -73,6 +81,8 @@
 
 <p>You will use Unity Engine, Blender and Gimp to create a 2D platforming game.</p>
 
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
+
 <h2 id="fps-game">FPS Game</h2>
 
 <p>Difficulty: 6</p>
@@ -82,6 +92,8 @@
 <p>Tools and Frameworks: Unity Engine, Blender, Gimp</p>
 
 <p>You will use Unity Engine, Blender and Gimp to create a first person shooter.</p>
+
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
 
 <h2 id="digital-audio-workstation">Digital Audio Workstation</h2>
 
@@ -93,6 +105,8 @@
 
 <p>You will use Python, C and C++ to create a minimal music making software.</p>
 
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
+
 <h2 id="image-editing-software">Image Editing Software</h2>
 
 <p>Difficulty: 8</p>
@@ -103,6 +117,8 @@
 
 <p>You will use Python, C and C++ to create a minimal image editing software.</p>
 
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
+
 <h2 id="your-own-programming-language">Your Own Programming Language</h2>
 
 <p>Difficulty: 8</p>
@@ -110,6 +126,10 @@
 <p>Languages: To Be Decided</p>
 
 <p>Tools and Frameworks: To Be Decided. Maybe Lex &amp; Bison, or ANTLR, or a handwritten Minimal LR(1) parser (ew plz no).</p>
+
+<p>You will use and write a variety of container-type structures, including dynamic arrays, stacks, trees, and graphs.</p>
+
+<p><img src="https://via.placeholder.com/750x250" alt="" /></p>
 
 <h2 id="your-own-operating-system">Your Own Operating System</h2>
 
