define the magic system in books

--- a/pages/kind of evil/3.html
+++ b/pages/kind of evil/3.html
@@ -23,13 +23,49 @@
 		</div>
 		
 		<div style = "width:70vw; margin:auto; padding-bottom:3em; min-height: 70vh;">		
-			<h3 id="black-sheep"><strong>Black Sheep</strong></h3>
+			<h3 id="notes"><strong>Notes</strong></h3>
+
+<p>Magic, just like any other element, exists in the three forms of solid, liquid and gas. It can technically also exist as plasma and a bose-einstein-condensate, but thats basically never gonna happen lol.</p>
+
+<p>Just like fat, creatures store magic in various forms throughout their bodies, and in various ways. For example, the biology of a dragon is very closely tied into magic - their scales are soft at birth, but as they absorb more magic, the scales become harder and harder, eventually becoming almost indestructible. Dragons also have a singular scale that stores any overflow of magic, located close to the heart. This is the scale that is most commonly used when using magic - because of its close proximity to the heart, the magic can be dissolved into the blood faster, allowing for dragon magics to occur. This does mean that the scale in front of a dragons heart can fluctuate from the strongest to the weakest scale in the dragons body, depending on how much magic they have used.</p>
+
+<p>Some people store magic in all three forms of solid, liquid and gas, sorta like a triple point. When casting, the volatile and higher energy gases generally get used first, while the liquid slowly evaporates to fill the space, and the solid liquefies. This storage container is linked directly to the heart, and located in the cavity that the diaphram acts as a separator for. Sometimes, when a person uses too much magic, due to the close proximity to their lungs, they can start to breathe traces of whatever spell they were casting, as the magic permeates throughout their blood and follows the reverse process that oxygen goes through when entering the lungs. This is also incredibly dangerous - many magicians have died while trying to cast spells that their body can’t contain, just because they have the raw magic reserves to do it.</p>
+
+<p>Some creatures, as well as most people, don’t store the magic, but instead their bodies directly process it in a similar way that oxygen gets processed. Generally, creatures that directly process the magic are physically stronger, have more endurance, and live for a longer time as their bodies use the ambient magic to create new stem cells and sustain longevity. There have been cases where old people move from low-concentration to high-concentration areas of mana and their bodies seem to reverse in age, becoming 4-5 years younger.</p>
+
+<p>There are also creatures that have no natural method of processing the ambient mana in their surroundings, and these species live a shorter, more dangerous, less fulfilling life.</p>
+
+<h3 id="farm"><strong>Farm</strong></h3>
+
+<p>As I approach, the city seems to hold its’ breath, although what it waits for, I don’t know - the gate stands unguarded, and not a single sound rises from above the walls of what is usually an area full of hawkers, markets and merchant traders. The lonely clopping of a single set of hooves echoes out between the two vast mountain faces that embrace the walls of the city, …</p>
+
+<h3 id="sticks-and-stones"><strong>Sticks and Stones</strong></h3>
+
+<h3 id="black-sheep"><strong>Black Sheep</strong></h3>
 
 <p>Walking through the streets that I once called home now feels - different. The eyes that follow my every move are unnerving me just as much as I unnerve them, staring at me like some exotic creature in a pen. I guess some part of me knew it would be this way. How can a creature of magic coexist with those that fear the very idea of magic itself? My foot catches on a slab of stone and unbalances me, sending me lurching forwards and out of my head.</p>
 
 <p>My meanderings have taken me, once again, to my old haunt. The place lies abandoned now, a squat house near the edge of town, but my memories of it remain fond. Peeling off my rain soaked cloak, I take shelter underneath the entryway, a thick sheet of rain separating me from the outside world. Recently I’ve found solace in the isolation - there’ve been too many questioning glances recently, curious gazes, and fearful townsfolk.</p>
 
 <p>Looking down at my hands, I twitch my fingers, muttering those familiar words as I call fire to my fingertips. The water starts to steam around me, lifting off of my clothes and forming trails into the otherwise cold night. One by one, the lights of the village turn off, the rain slows down and eventually stops, and the sounds of the night start to rise. They’re familiar to me. Slowly making my way inside, I light the candles, one by one. I don’t need them, but it’s habit, ingrained in me by years of repeating the pattern.</p>
+
+<h3 id="silver-lining"><strong>Silver Lining</strong></h3>
+
+<p>Sometimes, it gets difficult to remember why I did this. The demons seem to sit on both my shoulders, and nothing I do shrugs them off. Through it all, I’ve seen cities collapse, more friends have died or left than I could care to think about, and still the cogs that drive me forward don’t seem to be stopping. With a handful of allies left, I realised the truth - in the entire cosmos, the only meaning I will ever find is what I attach to it. Life itself is purposeless, and the fear of freedom left me burying my head in the sand for too long. My own vessel has grown unimaginably - the grand magics of the highest circle are within my grasp - quiet spells that look like luck, or fate, as opposed to strength. The spells flow from inside, fuelled by my own heart, coalescing into the reality until I shape it to my desire. Still, if this is enough to raise the dead, and call back old allies, has yet to be seen.</p>
+
+<h3 id="caustics"><strong>Caustics</strong></h3>
+
+<p>Once again, I find myself examining the stone. The gleaming edges seem to naturally smooth themselves to a brighter polish each time my fingers run over them, and the stone itself catches the light like a gem, refracting the rays into an iridiscint rainbow on the dusty ground. Closing my eyes, I call a spark of magic from my heart, feeling the air <em>snap</em> for a brief second, and then, for a brief second, ignite. Each day of study seems to take me closer to the true nature of my lineage, although I have yet to recieve any indication of my successes.</p>
+
+<h3 id="faith-in-defeat"><strong>Faith in Defeat</strong></h3>
+
+<p>For the past three months, we’ve stood on these walls, hiding like scared children when the soldiers come. Our numbers seem to fall day by day - by either death or desertion, it makes little difference, but those that remain all seem queasier as the days pass. Every day leaves us twitching at noises a little quieter than before, and all of us are almost ready to break. Although we’re on rations, I can only manage a small bite of my gruel before setting it aside. It’s difficult to eat when you’re on a battlefield, and although I know I should, it’s hard to force myself, even in times like this. Hagen seems to be the worst of us right now - what was once a towering, broad shouldered man has been reduced to little more than a wire frame, held together by nothing but a paper bag of skin.</p>
+
+<p>Yet still, we refuse to accept defeat. All of us who remain are painfully aware of the inevitable, but we’ve fought too hard, lost too much, to give up at this point. Still, the thought comes back to me - that creature we slew, the one that started this mess - we know what it is now. And we know how to wake it. For better or worse, this dark power might be the only one that can help us defend our walls, well past death. My jaw cracks on a hard shard of bone, a leftover of leftovers that is now treated as a delicacy by almost all of us. I will end this fight, even if I sacrifice my soul to do it.</p>
+
+<h3 id="book-of-dead"><strong>Book of Dead</strong></h3>
+
+<p>And as it does, the unending clock of time ticks once more. As another epoch comes and goes, the denizens that guide dying souls on their path all return to their own plane - for the next few months, those that die will remain here as wandering ghosts, until the denizens come back and release the souls from their mortal tethers.</p>
 
 
 		</div>
