add project categories

--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
 			<h1 style = "padding-left:1em">About Me</h1>			
 	<hr>	
 	<div style = "height:400px; padding:1em;">
-		<img src = "https://via.placeholder.com/300x400"style = "float:left; padding-right:1em; padding-bottom:1em;"></img>
+		<img src = "https://static.wikia.nocookie.net/shrek/images/9/9b/GoodShrekImage.png/revision/latest?cb=20201220080410" 
+		style = "float:left; padding-right:1em; padding-bottom:1em; max-width:300px; max-height:400px;">
+		</img>
 		
 		<p>
 			I'm a UK based software engineer, skilled in multiple frameworks and tech stacks.
