--- a/notes/A Holistic Overview Of Starting A Business.html
+++ b/notes/A Holistic Overview Of Starting A Business.html
@@ -16,7 +16,20 @@
 	</head>
 
 	<body>
-		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
+		<!--
+<div style = "height:3em;">
+<a href = "/" style = "margin-left:3em;">...</a>
+</div>
+-->
+
+<div style = "margin:auto; text-align:center; padding-top:2em;">
+<h1>A HOLISTIC OVERVIEW OF STARTING A BUSINESS</h1>
+<p href = "/">Kye Cunningham</p>
+</div>
+
+
+<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em;">
+<hr>
 <h1 id="a-holistic-overview-of-starting-a-business">A Holistic Overview Of Starting A Business</h1>
 
 <p>Learning how to grow a successful business takes time. Networking, cultivating the image, and identifying opportunities are all crucial to success. Before starting a business of your own, there are a few things you should do first, to help estimate the potential success of your endeavour.</p>
