--- a/notes/Ethics.html
+++ b/notes/Ethics.html
@@ -16,7 +16,20 @@
 	</head>
 
 	<body>
-		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
+		<!--
+<div style = "height:3em;">
+<a href = "/" style = "margin-left:3em;">...</a>
+</div>
+-->
+
+<div style = "margin:auto; text-align:center; padding-top:2em;">
+<h1>ETHICS</h1>
+<p href = "/">Kye Cunningham</p>
+</div>
+
+
+<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em;">
+<hr>
 <h1 id="general-data-protection-regulation-gdpr">General Data Protection Regulation (GDPR)</h1>
 
 <p>The general data protection regulation is a regulation in the European Union law on data protection and privacy for all individuals within the EU and the European Economic Area.</p>
