--- a/notes/Formal Languages.html
+++ b/notes/Formal Languages.html
@@ -16,7 +16,20 @@
 	</head>
 
 	<body>
-		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
+		<!--
+<div style = "height:3em;">
+<a href = "/" style = "margin-left:3em;">...</a>
+</div>
+-->
+
+<div style = "margin:auto; text-align:center; padding-top:2em;">
+<h1>FORMAL LANGUAGES</h1>
+<p href = "/">Kye Cunningham</p>
+</div>
+
+
+<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em;">
+<hr>
 <h1 id="propositional-logic">Propositional Logic</h1>
 
 <p><img src="https://miro.medium.com/max/419/1*_2bXg9DJR3HS84cNxGyD4w.png" alt="" /></p>
