--- a/notes/Learn Programming From Scratch.html
+++ b/notes/Learn Programming From Scratch.html
@@ -16,9 +16,20 @@
 	</head>
 
 	<body>
-		<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em; border-right:1px solid black; border-left:1px solid black;">
-<hr />
+		<!--
+<div style = "height:3em;">
+<a href = "/" style = "margin-left:3em;">...</a>
+</div>
+-->
 
+<div style = "margin:auto; text-align:center; padding-top:2em;">
+<h1>LEARN PROGRAMMING FROM SCRATCH</h1>
+<p href = "/">Kye Cunningham</p>
+</div>
+
+
+<div style = "margin:auto; width:70vw; padding-left:5vw; padding-right:5vw; padding-top:3em; padding-bottom:6em;">
+<hr>
 <h1 id="projects">Projects</h1>
 
 <p>The aim of these projects is to provide a foundation for study - not to provide a complete education on programming. Each one of these projects was chosen because they make use of different techniques that are commonly used throughout many other projects, and will hopefully provide a good starting point to making your own software of choice, whatever that may be.</p>
