--- a/note.html
+++ b/note.html
@@ -128,11 +128,13 @@
 			<div class = "footer" style = "padding-left:5%; padding-right:5%; width:90%; margin-top:0;text-align:right;">	
 			
 				<h1>Contact Me</h1>
-					<div>
-						<a style = "color:black;" href = "mailto:kyecunningham53@gmail.com"><i class="icon-fixed-width icon-large icon-envelope"></i></a>
-						<a style = "color:black;" href = "https://github.com/daz3n"><i class="icon-fixed-width icon-large icon-github"></i></a>
-						<a style = "color:black;" href = "#"><i class="icon-fixed-width icon-large icon-linkedin"></i></a>	
-					</div>
+				
+<div>
+	<a style = "color:black;" href = "mailto:kyecunningham53@gmail.com"><i class="icon-fixed-width icon-large icon-envelope"></i></a>
+	<a style = "color:black;" href = "https://github.com/daz3n"><i class="icon-fixed-width icon-large icon-github"></i></a>
+	<a style = "color:black;" href = "https://www.linkedin.com/in/kye-cunningham-network/"><i class="icon-fixed-width icon-large icon-linkedin"></i></a>	
+</div>
+			
 			</div>	<!-- footer -->
 
 			</div>
